--- a/RC_02/RC_02/RC_02.vcxproj
+++ b/RC_02/RC_02/RC_02.vcxproj
@@ -127,7 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Computer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TokenRingNetwork.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Computer.h" />
+    <ClInclude Include="TokenRingNetwork.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="computers.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
