--- a/RC_02/RC_02/RC_02.vcxproj
+++ b/RC_02/RC_02/RC_02.vcxproj
@@ -128,11 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Computer.cpp" />
+    <ClCompile Include="EMessageStatus.cpp" />
+    <ClCompile Include="ETokenStatus.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Token.cpp" />
     <ClCompile Include="TokenRingNetwork.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Computer.h" />
+    <ClInclude Include="EMessageStatus.h" />
+    <ClInclude Include="ETokenStatus.h" />
+    <ClInclude Include="Token.h" />
     <ClInclude Include="TokenRingNetwork.h" />
   </ItemGroup>
   <ItemGroup>
